--- a/Profile.html
+++ b/Profile.html
@@ -46,9 +46,9 @@
     </div>
   </section>
     <div class="buttons">
-    <button>Email📮: seohe08@naver.com</button>
-    <button>소속🏫: 한림대학교(소프트웨어학부👩🏻‍💻 23)</button>
-    <button>생일🎂 : 2004.08.26</button>
+    <button>Email📮: xxxxx@xx.com</button>
+    <button>소속🏫: oouniv.software </button>
+    <button>생일🎂 : 0000.00.00</button>
   </div>
 </div>
 </html>
