--- a/Profile.html
+++ b/Profile.html
@@ -20,7 +20,7 @@
     </div>
     <div class="icon arrow"><i class="fas fa-arrow-left"></i></div>
     <div class="icon dots"><i class="fas fa-ellipsis-v"></i></div>
-    <div class="name">HyeWon</div>
+    <div class="name">name</div>
     <div class="about">Frontend Developer</div>
     <div class="inner-area">
       <div class="social-icons">
