--- a/Profile.html
+++ b/Profile.html
@@ -15,7 +15,7 @@
   <section class="wrapper">
     <div class="img-area">
       <div class="inner-area">
-        <img src="../card/image/잔망루피.jpg">
+        <img src="./image/잔망루피.jpg">
       </div>
     </div>
     <div class="icon arrow"><i class="fas fa-arrow-left"></i></div>
@@ -24,8 +24,8 @@
     <div class="about">Frontend Developer</div>
     <div class="inner-area">
       <div class="social-icons">
-        <a href="https://github.com/hyewon04" class="github"><img src="../card/image/GitHub.png"></a>
-        <a href="https://www.instagram.com/sysout.hye/" class="insta"><img src="../card/image/Instagram.webp"></a>
+        <a href="https://github.com/hyewon04" class="github"><img src="./image/GitHub.png"></a>
+        <a href="https://www.instagram.com/sysout.hye/" class="insta"><img src="./image/Instagram.webp"></a>
       </div>
     </div>
     <div class="social-share">
